@@ -26,7 +26,7 @@ $(DLL): $(build_sources)
 assemblydir = $(libdir)/monodevelop/bin
 assembly_DATA = $(DLL) $(DLL).config
 
-CLEANFILES = $(DLL)
+CLEANFILES = $(DLL) $(DLL).mdb
 DISTCLEANFILES = $(DLL).config
 
 EXTRA_DIST = $(FILES) $(DLL).config.in
