@@ -1,6 +1,4 @@
 
-CSC = mcs /debug
-
 DLLS = /r:System.Drawing /r:ICSharpCode.SharpZipLib.dll \
 	/r:../../../build/bin/ICSharpCode.SharpRefactory.dll \
 	/r:../../../build/bin/MonoDevelop.Core.dll \
@@ -390,7 +388,7 @@ Services/StockIcons.cs : ./Services/process-icons.pl ../../../build/data/resourc
 assemblydir = $(libdir)/monodevelop/bin
 assembly_DATA = $(ASSEMBLY) $(ASSEMBLY).config
 
-CLEANFILES = $(ASSEMBLY)
+CLEANFILES = $(ASSEMBLY) $(ASSEMBLY).mdb
 DISTCLEANFILES = $(ASSEMBLY).config
 
 EXTRA_DIST = $(FILES) ./Services/process-icons.pl $(ASSEMBLY).config.in
