@@ -1,5 +1,4 @@
 
-CSC = mcs /debug
 ASSEMBLY = dbgen.exe
 
 FILES = src/AssemblyInfo.cs \
@@ -12,12 +11,12 @@ all: $(ASSEMBLY)
 REFS = /r:../../../build/bin/MonoDevelop.Base.dll /r:../../../build/bin/MonoDevelop.Core.dll
 	
 $(ASSEMBLY): $(build_sources)
-	$(CSC) $(build_sources) $(REFS) /out:$(ASSEMBLY)
-	cp $(ASSEMBLY) ../../../build/bin/.
+	$(CSC) $(build_sources) $(REFS) /out:$(ASSEMBLY) \
+	&& cp $(ASSEMBLY) ../../../build/bin/.
 
 assemblydir = $(libdir)/monodevelop/bin
 assembly_DATA = $(ASSEMBLY)           
 
-CLEANFILES = $(ASSEMBLY)
+CLEANFILES = $(ASSEMBLY) $(ASSEMBLY).mdb
 EXTRA_DIST = $(FILES)
 
