@@ -1,3 +1,8 @@
+2004-10-21  John Luke  <john.luke@gmail.com>
+
+	* *Makefile.am: remove CSC= in individual Makefile.am's (make CSC='mcs -g' for debug)
+	add $(DLL).mdb to CLEANFILES
+
 2004-10-17  John Luke  <john.luke@gmail.com>
 
 	* configure.in: echo $CSC at the end for the prefix impaired (like me)
